Paypal provider (#6)
